Added sparse docs to README
git-svn-id: http://shanesbrain.net/svn/rails/plugins/rails_stats@5 0877a1b9-3f14-db11-838e-000d614e31f0

--- a/README
+++ b/README
@@ -1,4 +1,10 @@
-RailsStat
-=========
+RailsStats
+==========
 
-Description goes here
+This is a graphical version of the 'stats' Rake task.  It generates a few graphs showing lines of code
+versus lines of test code, and other data about the health of your Rails app.
+
+Example
+=======
+
+Check out a live example at http://shanesbrain.net/rails_stats
