Added usage to README
git-svn-id: http://shanesbrain.net/svn/rails/plugins/rails_stats@7 0877a1b9-3f14-db11-838e-000d614e31f0

--- a/README
+++ b/README
@@ -4,6 +4,11 @@ RailsStats
 This is a graphical version of the 'stats' Rake task.  It generates a few graphs showing lines of code
 versus lines of test code, and other data about the health of your Rails app.
 
+Usage
+=====
+
+Simply install the plugin and browse to /rails_stats
+
 Example
 =======
 
