plead for more examples

--- a/README
+++ b/README
@@ -15,3 +15,4 @@ Example
 Check out a live example at http://shanesbrain.net/rails_stats showing stats for typo, the blogging
 tool.
 
+NOTE: The above example is no longer valid. If anyone has any examples, please add them below.
